# where-ar-you

./: .gitattributes  README.md
broadcaster/: .env.example  .gitignore  README.md  app.json  eas.json  google-services-example.json  google-services.json  package-lock.json  package.json
broadcaster/app/: _layout.tsx  index.tsx  oauth2redirect.tsx
broadcaster/components/: login.tsx
broadcaster/custom-components/: login.tsx
glasses/: README.md
glasses/Assets/Materials/Marker/: MarkerCylinderMaterial.mat  MarkerPlaneMaterial.mat  MarkerPlaneShader.shadergraph
glasses/Assets/Materials/MarkerDecoration/: CircleMaterial.mat  Lit Variant Green.mat  Lit Variant Orange.mat  Lit Variant Red.mat  (+3 more)
glasses/Assets/Models/: marker_arrow.fbx  marker_cube.fbx  marker_sphere.fbx
glasses/Assets/Prefabs/: Billboard.prefab  DistanceIndicator.prefab  Marker.prefab  MarkerArrow.prefab  MarkerCube.prefab  MarkerSphere 1.prefab
glasses/Assets/Scenes/: MainScene.unity  SampleScene.unity
glasses/Assets/Scripts/: Billboard.cs  ButtonToggleGroup.cs  DistanceIndicator.cs  LocationMarker.cs  MarkerConfig.cs  MarkerPoolController.cs  PositionServiceClient.cs
glasses/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
glasses/Assets/XR/: XRGeneralSettingsPerBuildTarget.asset
glasses/ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  ProjectSettings.asset  TagManager.asset
relay-server/: Cargo.toml  Dockerfile
relay-server/src/: main.rs
server/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
server/src/: auth.rs  main.rs
(+6 files in other folders)
