[package]
name = "relay-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
jsonwebtoken = { version = "10.0", features = ["rust_crypto"] }
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] } 
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.47.1", features = ["full"] }

